update image version in yaml file

--- a/yaml/container-allocation/container-allocation-deployment.yaml
+++ b/yaml/container-allocation/container-allocation-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: container-allocation
     spec:
       containers:
-      - image: 192.168.2.112:5000/container-allocation:v0.2
+      - image: adachisakura/container-allocation
         imagePullPolicy: IfNotPresent
         name: container-allocation
         ports:
