--- a/yaml/gok8s/gok8s-deployment.yaml
+++ b/yaml/gok8s/gok8s-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: gok8s
     spec:
       containers:
-        - image: adachisakura/gok8s:v0.7.4
+        - image: adachisakura/gok8s
           imagePullPolicy: IfNotPresent
           name: gok8s
           env:
