--- a/yaml/container-allocation/container-allocation-deployment.yaml
+++ b/yaml/container-allocation/container-allocation-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: container-allocation
+  namespace: allocation
   labels:
     app: container-allocation
 spec:
