--- a/yaml/container-allocation/container-allocation-service.yaml
+++ b/yaml/container-allocation/container-allocation-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: container-allocation
+  namespace: allocation
   labels:
     app: container-allocation
 spec:
